web/src/pages/main/Main.css
.splashContainer {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 40px;
}

.timerContainer {
    text-align: center;
    margin-top: -60px;
    margin-bottom: 40px;
}

.plutaContainer {
    text-align: center;
    width: 600px;
    aspect-ratio: 1/1;
    margin-left: auto;
    margin-right: auto;
}

@media only screen and (min-width: 1100px) {
    .chatContainer {
        display: none;
    }

    .main {
        width: calc(100vw - 40rem);
        float: left;
        overflow-x: hidden;
        height: 100%;

        &::-webkit-scrollbar {
            display: none;
        }
    }
}

@media only screen and (max-width: 1100px) {
    .main {
        overflow-x: hidden;
        overflow-y: scroll;
        width: 100%;
    }

    .splashContainer {
        padding: 1rem;
    }

    .timerContainer {
        text-align: center;
        margin-top: 60px;
        margin-bottom: 0;
    }

    .plutaContainer {
        text-align: center;
        width: 350px;
        aspect-ratio: 1/1;
        margin-left: auto;
        margin-right: auto;
    }

    .chatContainer {
        overflow: auto;
        width: 100%;
        height: 100%;
        }
  
    .sponsorsContainer {
        display: none;
    }
}

